<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.ubcma.leadster.activity.TrackingActivity">

    <!--add a toolbar that has a check icon for input completion-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_followup_calls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_followup_calls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_followup_calls"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_recuits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_recuits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recruit_leads" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_sells_leads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_sells_leads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sells_leads"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_interviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_interviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_interviews"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_sells_apts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/input_sells_apts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sells_apts"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
